@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-10-10T01:50:57Z",
+  "timestamp" : "2022-10-10T08:28:55Z",
   "count_outdated" : 572,
   "uniques_outdated" : 329,
-  "count" : 594,
+  "count" : 593,
   "uniques" : 340,
   "clones" : [
     {
       "timestamp": "2022-09-26T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
