@@ -1,3 +1,11 @@
+2022-10-10T08:28:55Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3217882082
+* notice: last 14d: unq all: 5 21
+* notice: prev accum: outdated-unq outdated-all / unq all: 329 572 / 340 594
+* notice: next accum: outdated-unq outdated-all / unq all: 329 572 / 340 593
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-09-26]
+
 2022-10-10T01:50:57Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3216378734
 * notice: last 14d: unq all: 5 22
